Correct the text-overflow for long filenames
[fixes #58897450]

--- a/app/assets/stylesheets/DocumentSet/index/import-mass-upload.less
+++ b/app/assets/stylesheets/DocumentSet/index/import-mass-upload.less
@@ -20,6 +20,9 @@
     line-height: 1.4em;
     height: 1.4em;
     margin: .1em 1em;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 
     i {
       margin-right: 1em;
